# HERMES-navigate

./: .gitignore  CMakeLists.txt  README.md  package.xml
behavior_trees/: explore_and_cover.xml  hermes_exploration_bt.xml  navigate_with_replanning.xml
config/: ekf.yaml  nav2_params.yaml  ros_gz_bridge.yaml  sim_nav2_params.yaml  slam_toolbox_params.yaml
include/hermes_navigate/: compute_frontiers.hpp  costmap_constants.hpp  coverage_tracker_node.hpp  frontier_types.hpp  hermes_navigate_node.hpp  score_frontiers.hpp  select_coverage_waypoint.hpp  select_next_frontier.hpp  should_do_coverage.hpp
include/hermes_navigate/bt_plugins/: assign_costs_node.hpp  blackboard_check_bool_node.hpp  blacklist_frontier_node.hpp  mark_frontier_visited_node.hpp  navigate_through_waypoints_node.hpp  navigate_to_frontier_node.hpp  return_to_start_condition.hpp  return_to_start_node.hpp  search_frontiers_node.hpp  select_frontier_node.hpp  select_wall_viewpoint_node.hpp
include/hermes_navigate/plugins/: base_cost_plugin.hpp  base_frontier_search.hpp  euclidean_plugin.hpp  information_gain_plugin.hpp  wavefront_frontier_detector.hpp
launch/: display_launch.py  full_exploration_launch.py  hermes_navigate_launch.py  nav2_exploration_launch.py  nothing_launch.py  simulation_launch.py
params/: plugin_params.yaml
plugins/: hermes_navigate_bt_plugins.xml  hermes_navigate_plugins.xml
src/: bt_node_registration.cpp  compute_frontiers.cpp  coverage_tracker_node.cpp  hermes_navigate_node.cpp  score_frontiers.cpp  select_coverage_waypoint.cpp  select_next_frontier.cpp  should_do_coverage.cpp
src/bt_plugins/: assign_costs_node.cpp  blackboard_check_bool_node.cpp  blacklist_frontier_node.cpp  mark_frontier_visited_node.cpp  navigate_through_waypoints_node.cpp  navigate_to_frontier_node.cpp  register_nodes.cpp  return_to_start_condition.cpp  return_to_start_node.cpp  search_frontiers_node.cpp  select_frontier_node.cpp  select_wall_viewpoint_node.cpp
src/plugins/: euclidean_plugin.cpp  information_gain_plugin.cpp  wavefront_frontier_detector.cpp
urdf/: hermes_robot.urdf.xacro  hermes_sim.sdf  hermes_sim.sdf.xacro  hermes_sim.urdf.xacro
worlds/: hermes_world.sdf  workshop_world.sdf
