<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hermes_navigate</name>
  <version>0.1.0</version>
  <description>
    Nav2-based autonomous frontier exploration and camera-coverage navigation system
    for the HERMES hazardous-environment reconnaissance robot (ROS 2 Jazzy).
  </description>
  <maintainer email="hermes@example.com">HERMES Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 -->
  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>

  <!-- Nav2 -->
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav_msgs</depend>

  <!-- BehaviorTree.CPP v4 (used by Nav2 Jazzy) -->
  <depend>behaviortree_cpp</depend>

  <!-- TF2 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Message / geometry types -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- pluginlib for BT node plugin registration -->
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Simulation (Gazebo Harmonic + ROS 2 Jazzy) -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>sdformat_urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Register BT node plugins so Nav2 BT Navigator can discover them -->
    <nav2_behavior_tree plugin="${prefix}/plugins/hermes_navigate_bt_plugins.xml"/>
  </export>
</package>
